--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,30 @@
     }
 }
 
+body {
+    color: #dcdcdc;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+h5 {
+    word-spacing: 20px;
+}
+
+h6 {
+    word-spacing: 5px;
+}
+
+p {
+    font-size: 1.25rem;
+}
+
+#landingImg {
+    opacity: 0.7;
+}
+
 @theme inline {
     --radius-sm: calc(var(--radius) - 4px);
     --radius-md: calc(var(--radius) - 2px);
