--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,10 @@ h6 {
     word-spacing: 5px;
 }
 
-#projectName {
-    font-size: 1.5rem;
+#projectNameStyling {
+    font-size: 2rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 
@@ -46,7 +48,7 @@ h6 {
     font-size: 1.25rem;
 }
 
-#landingImg {
+#headerImg {
     opacity: 0.5;
 }
 
