--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,12 @@ h3 {
 
 h4 {
     font-size: 2rem;
+    font-weight: 300;
 }
 
 h5 {
     word-spacing: 20px;
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 h6 {
@@ -50,6 +51,37 @@ h6 {
 
 #headerImg {
     opacity: 0.5;
+
+}
+
+.animated-underline{
+  position: relative;
+  display: inline-block;
+  padding-bottom: 5px;
+  text-decoration: none;
+  transition: color 0.3s ease-out;
+}
+
+.animated-underline::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #dcdcdc;
+  transform: scaleX(0);
+  transform-origin: bottom left;
+  transition: transform 0.3s ease-out;
+}
+
+.animated-underline:hover {
+  cursor: pointer;
+  font-weight: 200;
+}
+
+.animated-underline:hover::after {
+  transform: scaleX(1);
 }
 
 @theme inline {
